--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="1487537573_document-excel-csv" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\res\1487537573_document-excel-csv.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="template_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\template_logo.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
