--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="template_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\template_logo.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="template_logo_60x60" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\template_logo_60x60.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
