--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -136,4 +136,7 @@
   <data name="1492455014_67" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\1492455014_67.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="logo_clean_28" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo_clean_28.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
